feat(lectures): subtitles+dubbing, endpoints, path fixes, student/instructor toggles, VTT mime, tools JS

--- a/templates/csrf_error.html
+++ b/templates/csrf_error.html
@@ -26,7 +26,7 @@
                         <li>Clear your browser cache and cookies</li>
                     </ul>
                     <div class="mt-4">
-                        <a href="{{ url_for('main.index') }}" class="btn btn-primary">Return to Home</a>
+                        <a href="{{ url_for('auth.login') }}" class="btn btn-primary">Return to Login</a>
                         <a href="javascript:history.back()" class="btn btn-secondary ml-2">Go Back</a>
                     </div>
                 </div>
